# csc582-asg1

./: CMakeLists.txt
source/: CMakeLists.txt
source/FourBitAdder/: CMakeLists.txt  FourBitAdder.h
source/FourBitAdder/intern/: CMakeLists.txt  FourBitAdder.cpp  LogicGates.cpp  LogicGates.h
tests/: CMakeLists.txt
tests/gtests/: CMakeLists.txt  GTestFourBitAdder.cpp  GTestFullAdder.cpp  GTestHalfAdder.cpp  GTestLogicGates.cpp
